- fixed overflow in mobile view

--- a/LandingPage/css/index.css
+++ b/LandingPage/css/index.css
@@ -1,21 +1,24 @@
 body {
     margin: 0;
     padding: 0;
-    color: #000;
     overflow: hidden;
 }
 
-#body{
-    overflow: hidden;
-    box-shadow: 0 0 150px rgba(0,0,0,0.9) inset;
+.sitewrapper{
+    position: fixed;
+    overflow-x: hidden;
+    width: 100%;
     height: 100%;
+    overflow-y: hidden;
+
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(186,186,186,1) 23%,rgba(186,186,186,1) 77%,rgba(255,255,255,1) 100%);
 }
 
 #vignette{
     position: fixed;
     width: 100%;
     height: 100%;
-    /*box-shadow: 0 0 150px rgba(0,0,0,0.9) inset;*/
+    box-shadow: 0 0 150px rgba(0,0,0,0.9) inset;
     pointer-events: none;
 }
 
@@ -148,8 +151,7 @@ body {
 }
 
 .linkContainer:nth-child(2) .link{
-    background-image: url("https://i.imgur.com/SfAaBdg.png");
-    background-size: 117%;
+    background-image: url("https://i.imgur.com/Yus54vI.png");
 }
 
 .linkContainer:nth-child(3) .link{
